project(
    'gflow1',
    'fortran',
     version: '0.0.1.dev0',
     license: 'MIT',
    default_options : ['buildtype=debug'],
)
main_file = 'src/Gfmod.for'
src = [

    'src/bufio.FOR',
    'src/Dbcheck.for',
    'src/Dbfun.for',
    'src/Dbio.for',
    'src/Dbmat.for',
    'src/Dbmod.for',
    'src/Dbnear.for',
    'src/Dbnflow.for',
    'src/Dbserv.for',
    'src/Dicheck.for',
    'src/Difun.for',
    'src/Diio.for',
    'src/Dimat.for',
    'src/Dimod.for',
    'src/Dinear.for',
    'src/Dinflow.for',
    'src/Gffun.for',
    'src/Gfgrid.for',
    'src/Gfio.for',
    'src/Gfmat.for',
    'src/Gfnflow.for',
    'src/Gfserv.for',
    'src/Gftrace.for',
    'src/Gvcheck.for',
    'src/Gvfun.for',
    'src/Gvio.for',
    'src/Gvmat.for',
    'src/Gvmod.for',
    'src/GVNFLOW.FOR',
    'src/Gvserv.for',
    'src/lkcheck.for',
    'src/lkfun.for',
    'src/lkio.for',
    'src/lkmat.for',
    'src/lkmod.for',
    'src/lknflow.FOR',
    'src/lkserv.FOR',
    'src/Lscheck.for',
    'src/Lsfun.for',
    'src/Lsio.for',
    'src/Lsmat.for',
    'src/Lsmod.for',
    'src/Lsnear.for',
    'src/Lsnflow.for',
    'src/Lsserv.for',
    'src/Lsstream.for',
    'src/Pdcheck.for',
    'src/Pdfun.for',
    'src/Pdio.for',
    'src/Pdmat.for',
    'src/Pdmod.for',
    'src/Pdnear.for',
    'src/Pdnflow.for',
    'src/Pdserv.for',
    'src/Twfun.for',
    'src/Twio.for',
    'src/Twmod.for',
    'src/Twnear.for',
    'src/Twserv.for',
    'src/W3check.for',
    'src/W3fun.for',
    'src/W3io.for',
    'src/W3mat.for',
    'src/W3mod.for',
    'src/W3NEAR.FOR',
    'src/W3nflow.for',
    'src/W3serv.for',
    'src/Wlcheck.for',
    'src/Wlfun.for',
    'src/Wlio.for',
    'src/Wlmat.for',
    'src/WLMOD.FOR',
    'src/Wlnear.for',
    'src/Wlnflow.for',
    'src/Wlserv.for',
]
incdir = include_directories('./src')
executable(
    'gflow2',
    sources: [main_file] + src,
    include_directories: incdir,
    install : true,
    fortran_args : ['-std=legacy', '-fno-align-commons'],
)